try to fix mobile overflow-x:hidden problem

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -195,6 +195,9 @@ main {margin-top:55px;}
 
 }
 @media (max-width:600px) {
+    body {
+        overflow-x: hidden;
+    }
     .box {
         width:90%; /*90/15 = 6倍 */
         padding-top: 84% 
